cli/src/tui/browse/snapshots/snapshot_browse_pool_offline.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 973
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ View ────────┐┌ Content ─────────────────────────┐
│> Btrfs   ││> Filesystem  ││> Usage       ││pool not mounted -- run `braid unl│
│  NUT     ││  Devices     ││  Show        ││                                  │
│  Systemd ││  Subvolumes  ││  Df          ││                                  │
│  SMART   ││  Scrub       ││  Commit Stats││                                  │
│  lsblk   ││  Balance     ││              ││                                  │
│          ││  Quota       ││              ││                                  │
│          ││  Inspect     ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
│          ││              ││              ││                                  │
└──────────┘└──────────────┘└──────────────┘└──────────────────────────────────┘
$ btrfs filesystem usage ''
