cli/src/tui/browse/snapshots/snapshot_browse_smartctl_health_picker.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 913
expression: "buffer_to_string(&render(&model, 90, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ───────────────────────────────────────────────────┐
│  Btrfs   ││  Scan        ││   Name         Device                                      │
│  NUT     ││> Health      ││>  disk1        /dev/disk/by-id/virtio-disk1                │
│  Systemd ││  Info        ││   disk2        /dev/disk/by-id/virtio-disk2                │
│> SMART   ││  Attributes  ││                                                            │
│  lsblk   ││  Self-test Lo││                                                            │
│          ││  Error Log   ││                                                            │
│          ││              ││                                                            │
│          ││              ││                                                            │
│          ││              ││                                                            │
│          ││              ││                                                            │
│          ││              ││                                                            │
└──────────┘└──────────────┘└────────────────────────────────────────────────────────────┘
$ smartctl -H /dev/disk/by-id/virtio-disk1
