cli/src/tui/browse/snapshots/snapshot_browse_smartctl_scan.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 893
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││> Scan        ││/dev/sda -d scsi # /dev/sda, SCSI device          │
│  NUT     ││  Health      ││                                                  │
│  Systemd ││  Info        ││                                                  │
│> SMART   ││  Attributes  ││                                                  │
│  lsblk   ││  Self-test Lo││                                                  │
│          ││  Error Log   ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ smartctl --scan
