cli/src/tui/browse/snapshots/snapshot_browse_subvolume_detail.snap
---
source: cli/src/tui/browse/view.rs
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│> Btrfs   ││  Filesystem  ││data                                              │
│  NUT     ││  Devices     ││Name:data                                         │
│          ││> Subvolumes  ││UUID:abc-123                                      │
│          ││  Scrub       ││                                                  │
│          ││  Balance     ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ btrfs subvolume list ''
