cli/src/tui/browse/snapshots/snapshot_browse_systemd_failed.snap
---
source: cli/src/tui/browse/view.rs
assertion_line: 875
expression: "buffer_to_string(&render(&model, 80, 14))"
---
┌ Pgm ─────┐┌ Cmd ─────────┐┌ Content ─────────────────────────────────────────┐
│  Btrfs   ││  Status      ││  UNIT LOAD ACTIVE SUB DESCRIPTION                │
│  NUT     ││  Show        ││0 loaded units listed.                            │
│> Systemd ││  Braid       ││                                                  │
│  SMART   ││> Failed      ││                                                  │
│  lsblk   ││  Timers      ││                                                  │
│          ││  Mounts      ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
│          ││              ││                                                  │
└──────────┘└──────────────┘└──────────────────────────────────────────────────┘
$ systemctl list-units --failed --all --no-pager
